Fix blog index link spacing

--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -12,6 +12,7 @@ figcaption {
     position: relative;
     font-size: 1em;
     margin-top: 5em;
+    margin-bottom: 1em;
 }
 
 figcaption a:link {
